version/0.76/_sources/autoapi/pyedb/misc/decorators/index.rst.txt






The ``pyedb.misc.decorators`` library
=====================================

.. py:module:: pyedb.misc.decorators


Summary
-------








.. py:currentmodule:: decorators
.. tab-set::







    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~deprecated`
            - Decorator to mark functions or methods as deprecated.


          * - :py:obj:`~deprecated_class`
            - Decorator to mark a class as deprecated.


          * - :py:obj:`~deprecated_property`
            - This decorator marks a property as deprecated.


          * - :py:obj:`~deprecate_argument_name`
            - Decorator to deprecate certain argument names in favor of new ones.


          * - :py:obj:`~execution_timer`
            - 























Module detail
-------------

.. py:function:: deprecated(reason: str = '', *, category: Any = FutureWarning)

   
   Decorator to mark functions or methods as deprecated.


   :Parameters:

       **reason** : :class:`python:str`, :obj:`optional`
           Message to display with the deprecation warning.

       **category** : :obj:`Warning`, :obj:`optional`
           Warning category to emit. Use ``None`` to disable runtime warnings while preserving metadata.














   ..
       !! processed by numpydoc !!

.. py:function:: deprecated_class(reason: str = '', *, category: Any = FutureWarning)

   
   Decorator to mark a class as deprecated.


   :Parameters:

       **reason** : :class:`python:str`, :obj:`optional`
           Message to display with the deprecation warning.

       **category** : :obj:`Warning`, :obj:`optional`
           Warning category to emit. Use ``None`` to disable runtime warnings while preserving metadata.














   ..
       !! processed by numpydoc !!

.. py:function:: deprecated_property(message: str, *, category: Any = FutureWarning)

   
   This decorator marks a property as deprecated.
   It will emit a warning when the property is accessed.


   :Parameters:

       **message** : :class:`python:str`
           Custom message to display after the deprecation warning.

       **category** : :obj:`Warning`, :obj:`optional`
           Warning category to emit. Use ``None`` to disable runtime warnings while preserving metadata.














   ..
       !! processed by numpydoc !!

.. py:function:: deprecate_argument_name(argument_map)

   
   Decorator to deprecate certain argument names in favor of new ones.
















   ..
       !! processed by numpydoc !!

.. py:function:: execution_timer(custom_text)



